--- a/games.html
+++ b/games.html
@@ -56,10 +56,10 @@
   </tr>
     </tbody>
 </table></center>
-    <img src="IMG_0385.jpg" class="pic">
-    <img src="IMG_0389.jpg"  class="pic" style=float:right>
-    <img src="IMG_0270.jpg"  class="pic">
-    <img src="IMG_0452.jpg"  class="pic" style=float:right>
+<img src="https://codehs.com/uploads/376f1936b216d166fa333bacd60cde1c" class="pic">
+    <img src="https://codehs.com/uploads/310fdb1401e7d1f11621c2626270208e"  class="pic" style=float:right>
+    <img src="https://codehs.com/uploads/d87cb12d049559b4accab7d6d3a954cc"  class="pic">
+    <img src="https://codehs.com/uploads/2f0789c4c75ebbfe6ee47a4f2e17d568"  class="pic" style=float:right>
   <center>  <h1>
         Fun fact: I gained 10 pounds of muscle from the row of pictures on the top to the bottom
     </h1>
